tests/ui/repr/repr-repeated-attrs.stderr
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:29:8
   |
LL | #[repr(Rust, u8, u8)]
   |        ^^^^  ^^  ^^

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:35:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
...
LL | #[repr(u16)]
   |        ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:43:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:51:8
   |
LL | #[repr(C, C, u8, u8, u8)]
   |        ^  ^  ^^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0566`.
Future incompatibility report: Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:35:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
...
LL | #[repr(u16)]
   |        ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:43:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:51:8
   |
LL | #[repr(C, C, u8, u8, u8)]
   |        ^  ^  ^^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

